WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84156
[Qt] REGRESSION(
r113172
) Wheel events are scrolling inversed
https://bugs.webkit.org/show_bug.cgi?id=84156
Summary
[Qt] REGRESSION(r113172) Wheel events are scrolling inversed
Allan Sandfeld Jensen
Reported
2012-04-17 08:35:30 PDT
Since
r113172
: Make WebView a subclass of Flickable, the wheel-events have regressed to scrolling inversed.
Attachments
Patch
(1.46 KB, patch)
2012-04-17 08:37 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-04-17 08:37:41 PDT
Created
attachment 137543
[details]
Patch
Simon Hausmann
Comment 2
2012-04-17 09:01:48 PDT
Comment on
attachment 137543
[details]
Patch rs=me.
WebKit Review Bot
Comment 3
2012-04-17 09:10:54 PDT
Comment on
attachment 137543
[details]
Patch Clearing flags on attachment: 137543 Committed
r114384
: <
http://trac.webkit.org/changeset/114384
>
WebKit Review Bot
Comment 4
2012-04-17 09:10:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug