REGRESSION(r113172) Wheel events are scrolling inversed. https://bugs.webkit.org/show_bug.cgi?id=84156

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-04-17
Reviewed by Simon Hausmann.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::wheelEvent):

Canonical link: https://commits.webkit.org/101654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114384 268f45cc-cd09-0410-ab3c-d52691b4dbfc